# Pbuddy

./: README.md
.github/workflows/: auto-review-merge.yml  ci.yml
claude-buddy-reroll/: LICENSE  README.md  pyproject.toml
claude-buddy-reroll/buddy_reroll/: __init__.py  __main__.py  ascii_art.py  cli.py  constants.py  display.py  hasher.py  models.py  rng.py  roller.py
claude-buddy-reroll/tests/: __init__.py  test_hasher.py  test_rng.py  test_roller.py
terminal-buddy/: LICENSE  README.md  build.py  create_files.py  pyproject.toml  writer.py
terminal-buddy/terminal_buddy/: __init__.py  __main__.py  actions.py  app.py  atlas_view.py  breakthrough.py  evolution.py  i18n.py  pet.py  rarity.py  renderer.py  sprites.py  storage.py  themes.py  ticker.py  travel.py
terminal-buddy/tests/: __init__.py  test_actions.py  test_app_css.py  test_atlas_view.py  test_breakthrough.py  test_evolution.py  test_pet.py  test_rarity.py  test_sprites.py  test_storage.py  test_themes.py  test_ticker.py  test_travel.py
