[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-buddy-reroll"
version = "0.1.0"
description = "Claude /buddy pet reroll tool — clean-room Python rewrite"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "hdzattain"},
]
keywords = ["claude", "buddy", "pet", "reroll", "cli", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "rich>=13.0",
]

[project.scripts]
buddy-reroll = "buddy_reroll.cli:main"

[project.urls]
Homepage = "https://github.com/hdzattain/claude-buddy-reroll"
Repository = "https://github.com/hdzattain/claude-buddy-reroll"
Issues = "https://github.com/hdzattain/claude-buddy-reroll/issues"

[tool.hatch.build.targets.wheel]
packages = ["buddy_reroll"]
