[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminal-buddy"
version = "0.1.0"
description = "Raise your ASCII pets in the terminal - a virtual pet companion app"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "hdzattain"},
]
keywords = ["terminal", "pet", "tamagotchi", "ascii", "tui", "textual", "companion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "textual>=0.40",
    "rich>=13.0",
]

[project.scripts]
terminal-buddy = "terminal_buddy.app:main"

[project.urls]
Homepage = "https://github.com/hdzattain/terminal-buddy"
Repository = "https://github.com/hdzattain/terminal-buddy"
Issues = "https://github.com/hdzattain/terminal-buddy/issues"

